Next release
============

  * All functions that accept read concern now prohibit it if MongoDB is too
    old to support it (pre-3.2).
  * mongoc_collection_find_and_modify_with_opts now prohibits write concern if
    MongoDB is too old to support it (pre-3.2).
  * Other helper functions for commands that write, now prohibit write concern
    if MongoDB is too old to support it (pre-3.4):
      mongoc_client_read_write_command_with_opts
      mongoc_client_write_command_with_opts
      mongoc_collection_read_write_command_with_opts
      mongoc_collection_write_command_with_opts
      mongoc_database_read_write_command_with_opts
      mongoc_database_write_command_with_opts
      mongoc_collection_aggregate with $out
      mongoc_collection_drop_index_with_opts
      mongoc_collection_drop_with_opts
      mongoc_collection_rename_with_opts
      mongoc_database_drop_with_opts
    Write concern behavior is unchanged for regular CRUD functions.


mongo-c-driver 1.9.0
====================

It is my pleasure to announce mongo-c-driver 1.9.0. This version drops support
for MongoDB 2.4 and adds support for MongoDB 3.6 features:

  * New struct mongoc_change_stream_t to watch a collection for changes.
  * New struct mongoc_client_session_t represents a MongoDB 3.6 session,
    which supports causal consistency: you are guaranteed to read your writes
    and to perform monotonic reads, even when reading from secondaries or in
    a sharded cluster.
  * New functions that accept flexible options as a BSON document. These
    accept a "sessionId" option and any future options. In addition, the
    two new "update" functions accept the "arrayFilters" option that is new
    in MongoDB 3.6:
      mongoc_collection_insert_one
      mongoc_collection_insert_many
      mongoc_collection_update_one
      mongoc_collection_update_many
      mongoc_collection_replace_one
      mongoc_collection_delete_one
      mongoc_collection_delete_many
      mongoc_client_command_with_opts